photos and  colors fixed

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -129,7 +129,7 @@ h6 {
   height: 100%;
   transition: all 0.4s ease 0s;
   transform: translateX(250px);
-  background: #80dcff;
+  background: #00a3ad;
   border-left: 1px solid rgba(255, 255, 255, 0.1);
 }
 
@@ -209,7 +209,7 @@ h6 {
 
 .service-icon {
   background-color: #fff;
-  color: #80dcff;
+  color: #00a3ad;
   height: 7rem;
   width: 7rem;
   display: block;
@@ -326,7 +326,7 @@ footer.footer .social-link {
   width: 4rem;
   line-height: 4.3rem;
   font-size: 1.5rem;
-  background-color: #80dcff;
+  background-color: #00a3ad;
   transition: background-color 0.15s ease-in-out;
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.1);
 }
@@ -337,7 +337,7 @@ footer.footer .social-link:hover {
 }
 
 a {
-  color: #80dcff;
+  color: #00a3ad;
 }
 
 a:hover,
@@ -347,8 +347,8 @@ a:active {
 }
 
 .btn-primary {
-  background-color: #80dcff !important;
-  border-color: #80dcff !important;
+  background-color: #00a3ad !important;
+  border-color: #00a3ad !important;
   color: #fff !important;
 }
 
@@ -382,11 +382,11 @@ a:active {
 }
 
 .bg-primary {
-  background-color: #80dcff !important;
+  background-color: #00a3ad !important;
 }
 
 .text-primary {
-  color: #80dcff !important;
+  color: #00a3ad !important;
 }
 
 .text-secondary {
