--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -14,5 +14,5 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$primary: #80dcff !default;
+$primary: #00a3ad !default;
 $secondary: #ecb807 !default;
